--- a/ERS/pom.xml
+++ b/ERS/pom.xml
@@ -67,6 +67,7 @@
 	<build>
 		<plugins>
 			<plugin>
+				<finalName>ERS-API</finalName>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.6.0</version>
